cambios a nivel de horario en proceso

--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/agregar_cita.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/agregar_cita.html
@@ -66,10 +66,10 @@
                                {% comment %} <input type="time" name="hora" required =""> {% endcomment %}
                           {% comment %} <input type="time" name="hora" min="08:00" max="21:00" step="3600" /> {% endcomment %}
                          </p>
-                        <!-- <div class="form-group">
+                        <div class="form-group">
                             <label for="{{form.estado.name}}">{{form.estado.label}}</label>
                                 {{form.estado}}
-                        </div> -->
+                        </div> 
                              
                       
                     </div>
