--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/delete_cita.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/delete_cita.html
@@ -9,7 +9,7 @@
                     </strong>
                            <br>
                             {%if perms.gestion_agendamiento.view_cita%}
-                                <a href="/agendamiento/calendar" class="btn btn-info">
+                                <a href="/agendamiento/calendario_usuario" class="btn btn-info">
                                     <i class="bi bi-calendar"></i>
                                    Ver Calendario <br>
                                 </a>
