cambios en horario(3)

--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/usuario_changeCita.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/usuario_changeCita.html
@@ -45,8 +45,8 @@
 
                             <br>
                             <div class="form-group">
-                            <label for="{{form.hora.name}}"> {{form.hora.label}}</label>
-                                {{form.hora}}
+                            <label for="{{form.hora_atencion.name}}"> {{form.hora_atencion.label}}</label>
+                                {{form.hora_atencion}}
                             </div> 
                             <br>
                             <div class="form-group">
