--- a/Proyecto2/SmileSoft/gestion_cobros/templates/ver_detalle_cobro.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/ver_detalle_cobro.html
@@ -8,19 +8,20 @@
 					<center>  <h2> <i class="bi bi-ticket-detailed"></>Detalle del Cobro realizado</i></h2> </center>
 				<br>
 				<br>
-                <center>
+                <!-- <center>
                     <h4>
                         <b>Tratamiento/s realizado/s a:</b> 
                         {{cobro.paciente.numero_documento.nombre}} {{cobro.paciente.numero_documento.apellido}}
                     </h4>
-                </center>
+                </center> -->
                 <h6>
                     <b>Razón social: </b>{{cobro.razon_social}}
                 </h6>
                 <h6>
                     <b>Número de cédula/RUC: </b>{{cobro.numero_documento}}
                 </h6>
-                <h6><b>Fecha de realización: </b>{{cobro.fecha}}</h6>
+                <h6><b>Fecha: </b>{{cobro.fecha}}</h6>
+				<br>
 				<table class="table table-striped table-hover">
 					<thead style="border: 1cm;">
 						<tr>
@@ -39,7 +40,7 @@
 								{% endfor %}
 								<tr>
 									<td><b>Total</b></td>
-									<td><b>{{cobro.monto_total}} Gs</b></td>
+									<td><b>{{monto_total}} Gs</b></td>
 								</tr>
 								
 							{% else %}
