agregue el html de cerrado

--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/calendar.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/calendar.html
@@ -141,4 +141,18 @@
     </script>
 
  </body>
+ 
+	<!--Pie de pagina -->
+	
+				<div class="col-12 text-center copyright">
+					<samp>
+            <br>
+            <br>
+            <br>
+						<p>Copyright &copy; FP-UNA 2022 · Proyecto de Grado  </p>
+					</samp>
+				</div>
+			</div>
+
+		</div>
 </html>  
