--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/cerrado.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/cerrado.html
@@ -7,10 +7,12 @@
                     
                            <br>
         <strong  style="color:blue; font-size:16px;" >
-                        <h2  <i class="bi bi-journal-x"></i> Duplicado. <img src="{% static 'img/horario.jpg' %}" width="130px" alt="auto"> <br> Usted ya cuenta con una cita  <br> en la misma fecha y hora </h2>                                       
+                        <h2>   Horario de Atención <br> <img src="{% static 'img/aviso.jpg' %}" width="120px" alt="auto"> 
+                            <br> Lunes a Viernes  <br> <i style="color:black; font-size:16px;">- <b>Mañana:</b> 08:00hs a 12:00hs <br>
+                                                                                            - <b>Tarde:</b> 13:30hs a 21:00hs </i></h2>                                       
                     </strong> <br>
 
-                       <center> <small><b> Por favor verifique nuevamente el calendario </b> </small></center>
+                       <center> <small><b> Por favor elija otra fecha</b> </small></center>
                        <br>
                         {% comment %} <button  href="/agendamiento/usuario_addCita/{{user.numero_documento}} " class="btn btn-primary" type="submit" style="margin: 10px;">
                            Agendar una cita 
