--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/asignar_insumo.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/asignar_insumo.html
@@ -17,7 +17,7 @@
                         <br>
                         <center>
                             <h5>
-                                <b>Trataminto:</b> <i><td>{{ tratamiento.codigo_tratamiento.nombre }}<!--  {{tratamiento.codigo_tratamiento.precio}}--> </td></i>
+                                <b>Trataminto:</b> <i><td>{{ tratamiento.codigo_tratamiento.nombre_tratamiento }}<!--  {{tratamiento.codigo_tratamiento.precio}}--> </td></i>
                             </h5>
                         </CEnter>
                     <div style="margin: 20px;" >
